--- a/index.ipynb
+++ b/index.ipynb
@@ -156,11 +156,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires', 'Toronto', 'Marakesh']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']] "
+    "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']] \n",
+    "x_values "
    ]
   },
   {
