--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,8 @@
     "\n",
     "\n",
     "plotly.offline.iplot([trace_first_three_pops])\n",
-    "\n"
+    "\n",
+    "trace_first-"
    ]
   },
   {
