Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
     "\n",
     "plotly.offline.iplot([trace_first_three_pops])\n",
     "\n",
-    "trace_first-"
+    "trace_first_three_pops"
    ]
   },
   {
